# Telescopio-GoTo

./: README.md
Documentacion/: Telescopio GoTo con control por IMU y calibración Manual.docx
Hardware/: .gitignore  CMakeLists.txt  horizonte.h
Hardware/include/: btstack_config.h  lwipopts.h
Hardware/src/: Horizonte.c  horizonte.gatt  horizonte_gatt.c  horizonte_gatt.h  main.c
Software/horizonte/App/: pubspec.yaml
Software/horizonte/App/android/app/src/main/: AndroidManifest.xml
Software/horizonte/App/lib/: main.dart
Software/horizonte/App/test/: widget_test.dart
Software/horizonte/Server/: stardata
Software/horizonte/Server/api/: models.py  serializers.py
Software/horizonte/Server/api/migrations/: 0002_astroobject_imageurl_astroobject_info.py
Software/horizonte/Server/backend/: .gitignore  settings.py
server/: .gitignore
server/api/: urls.py  views.py
server/api/migrations/: 0001_initial.py
server/backend/: settings.py
software/: .gitignore  pubspec.yaml
software/android/app/src/main/: AndroidManifest.xml
software/lib/: main.dart
